--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,8 @@
         <activity android:name=".leaveType.LeaveTypeActivity"/>
         <activity android:name=".leaveLogs.LeaveLogsActivity"/>
         <activity android:name=".linkMan.LinkManActivity"/>
+        <activity android:name=".reimbursement.ReimbursementActivity"/>
+        <activity android:name=".reimburseType.ReimburseTypeActivity"/>
     </application>
 
 </manifest>
