请假添加调休模块 与申请编辑等截面进行功能整合 修改打卡界面逻辑 修改消息列表筛选参数

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,6 +80,7 @@
         <activity android:name=".reimbursement.ReimbursementActivity"/>
         <activity android:name=".reimburseType.ReimburseTypeActivity"/>
         <activity android:name=".normalReimburse.NormalReimburseActivity"/>
+        <activity android:name=".extraWork.ExtraWorkActivity"/>
     </application>
 
 </manifest>
